todo.txt
E-Mail Client:
- read e-mails
- add loger to ImapClient (save in database method calls and returned statuses)
- response client (mailbox list to select list above e-mails, hide date, 
                   hide checkbox, star)
- threads (imap extension)
- sending e-mails
- working version on ie (iframe issue)
- add search functionality
- attachments
- update emails list when moving mails
- delete email forever
- email and 
- refactor e-mailslistcontroller

DONE:
- add pages
- decode mailboxes labels (utf-7)
- change mailbox
- mark current mailbox
- mark not read message with different color 
    - add FLAGS: FLAGS BODY.PEEK[HEADER.FIELDS (DATE FROM)]
- dragable emails (between mailboxes)
- replace add_flags with store (in views), add parameter command (add, set etc.)
- add checklist with ["ALL", "READ", "UNREAD"]
- add button to create new message
- set as unseen / remove mailbox
- add buttons to select emails and remove them (just like in gmail)
- sort e-mail by date, but only the emails shown in current view 
    (imap by default doesn't enable to sort emails, there is
    an imap extension which has this functionality but it's not required to 
    be implmented by service providers (e.g. gmail))


CHECK THIS

>>> ic.select('"[Gmail]/Wszystkie"')
('OK', [b'4919'])
>>> 
>>> sock.send(b"AF34 SEARCH SUBJECT Praca\r\n")
27
>>> sock.recv(1000000)
b'* SEARCH 22 25 27 72 91 109 110 112 113 114 115 123 125 126 127 128 129 136 143 145 146 147 148 225 302 303 304 305 306 307 308 309 310 311 312 313 314 315 316 318 350 351 352 383 386 387 388 389 392 398 403 405 407 409 477 520 522 568 1104 1479 1779 3248 33'
>>> sock.recv(1000000)
b'18\r\nAF34 OK SEARCH completed (Success)\r\n'
>>> help(ic.csearch)

>>> ic.csearch([{"key": "SUBJECT", "value": "Test"])
  File "<stdin>", line 1
    ic.csearch([{"key": "SUBJECT", "value": "Test"])
                                                  ^
SyntaxError: invalid syntax
>>> ic.csearch([{"key": "SUBJECT", "value": "Test"}])
('OK', ['17', '18', '104', '673', '675', '678', '1575', '1953', '2312', '2850', '4699', '4849', '4856', '4887'])
>>> ic.csearch([{"key": "SUBJECT", "value": "Test", "decode": False}])
('OK', ['17', '18', '104', '673', '675', '678', '1575', '1953', '2312', '2850', '4699', '4849', '4856', '4887'])
>>> ic.select("Praca")
('OK', [b'3182'])
>>> ic.csearch([{"key": "SUBJECT", "value": "Test", "decode": False}])
('OK', ['674', '927', '1159', '1589', '3163'])
>>> 
